# ai-agents

./: .aider.conf.yml  .gitignore  CONVENTIONS.md  README.md  bun.lockb  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml  unit-tests.yml
AI_DOCS/: claude_tool_use.md
src/: app.module.ts  bash_session.py  editor_session.py  main.py  session_logger.py  test_bash_session.py
src/agents/: agents.module.ts  assistant.agent.spec.ts  assistant.agent.ts  base.agent.ts  bash.agent.spec.ts  bash.agent.ts  chat.agent.ts  editor.agent.spec.ts  editor.agent.ts
src/commands/: bash.command.ts  commands.module.ts  editor.command.ts
src/commands/chat/: chat.command.ts
src/config/: pino.config.ts
src/memory/: memory-manager.service.ts  memory.module.ts
src/tools/: base.tool.ts  bash.tool.ts  file.tool.spec.ts  file.tool.ts  tools.module.ts
src/tools/bash/: bash-operations.tool.ts  types.ts
src/tools/filesystem/: append-file.tool.ts  base-file.tool.ts  delete-file.tool.ts  file-exists.tool.ts  file-operations.tool.ts  read-file.tool.ts  types.ts  write-file.tool.ts
src/tools/memory/: add-memory.tool.ts  delete-memory.tool.ts  get-memory.tool.ts  list-memory.tool.ts  types.ts
src/tools/time/: time-operations.tool.ts  types.ts
src/tools/web/: browser.service.ts  types.ts  web-click.tool.ts  web-fetch.tool.ts  web-input.tool.ts
tests/: test_bash_session.py  test_editor_session.py  test_session_logger.py
